--- a/TeamProjectWebsite/SaceColor.css
+++ b/TeamProjectWebsite/SaceColor.css
@@ -1,6 +1,7 @@
 :root {
     --primary-color:#FF8C00;
     --secondary-color:black; 
+    --third-color:white;
     --background-color:#FFF5E1; 
     --text-color: #000000; 
   }
