--- a/assignment.css
+++ b/assignment.css
@@ -28,6 +28,13 @@ h1 {
     opacity: 0;
     transform: translateY(20px);
     animation: fadeInSlideUp 2s forwards;
+    margin-left: 30px;
+    margin-bottom:10px;
+}
+
+h2, h3 {
+    color: var(--third-color);
+    margin-bottom: 10px;
 }
 
 @keyframes fadeInSlideUp {
@@ -37,40 +44,66 @@ h1 {
     }
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-}
-
-table th, table td {
-    border: 2px solid var(--primary-color);
-    padding: 8px;
-    background-color: var(--third-color);
-}
-
-table th {
+.card {
+   
     background-color: var(--background-color);
-    color: var(--third-color);
-    text-align: left;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+    border: solid 2px var(--third-color);
+    max-width: 70%;
+    margin-left: 30px;
+    
 }
 
-table tr:nth-child(even) {
+.tabs {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    
+}
+
+.tab-button {
+ 
+    background-color: var(--third-color);
+    color: var(--text-color);
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 4px;
+    border: solid 3px var(--third-color);
+
+}
+
+.tab-button.active {
     background-color: var(--primary-color);
 }
 
-table tr:hover {
+.tab-content {
+    display: none;
+}
+
+.tab-content.active {
+    display: block;
+}
+
+.assignment-details, .exam-details {
+    margin-bottom: 20px;
+    color: var(--primary-color);
+}
+
+.input-link {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 12px;
     background-color: var(--third-color);
-}
-
-table td a {
-    color: var(--background-color);
+    color: var(--text-color);
     text-decoration: none;
-    font-weight: bold;
+    border-radius: 4px;
+    border: solid 3px var(--third-color);
 }
 
-table td a:hover {
-    text-decoration: underline;
+.input-link:hover {
+    background-color: var(--primary-color);
 }
 
 /* Header styles */
@@ -118,7 +151,7 @@ table td a:hover {
     text-decoration: none;
     color: var(--text-color);
     background-color: var(--primary-color);
-    padding: 10px 20px;
+    padding: 10px 20px; /* Combined padding for top/bottom and left/right */
     margin: 0 5px;
     border-radius: 5px;
     display: flex;
