--- a/assignment_input.css
+++ b/assignment_input.css
@@ -149,9 +149,8 @@ button:hover {
     background-color: var(--primary-color);
     color: var(--text-color);
     border-radius: 5px;
-    border: none;
+    border: none; /* Removed redundant border */
     padding: 10px 15px;
-    border: solid 3px var(--third-color);
     margin-left: 5px;
 }
 
