--- a/admin_tool.css
+++ b/admin_tool.css
@@ -244,4 +244,60 @@
       margin-bottom: 10px;
     }
   }
-  
+  /* Style the form for adding a new user */
+.add-user-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 15px;
+  margin-bottom: 30px;
+  padding: 20px;
+ 
+}
+
+.add-user-form label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.add-user-form input[type="email"],
+.add-user-form select {
+  padding: 10px;
+  width: 100%;
+  max-width: 400px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 1em;
+}
+
+.add-user-form select {
+  padding: 5px;
+    font-size: 1rem;
+    background-color: var(--third-color);
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
+    margin-right: 10px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    margin-bottom: 10px;
+}
+
+.add-user-form button.assign-button {
+  display: inline-block;
+    padding: 5px 10px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    color: #000; 
+    background-color: #e0f7fc; 
+    border: 3px solid var(--third-color); 
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  margin-bottom: 10px;
+}
+
+.add-user-form button.assign-button:hover {
+  background-color: #c4e6f1; 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); 
+    transform: translateY(-2px); 
+}
