--- a/profile.css
+++ b/profile.css
@@ -306,6 +306,33 @@ form {
   transform: translateY(-2px); 
 }
 
+.download_report_btn{
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  color: #000; 
+  background-color: #e0f7fc;
+  border: 3px solid var(--third-color); 
+  border-radius: 10px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  transition: all 0.3s ease; 
+}
+
+.download_report_btn:hover {
+  background-color: #c4e6f1; 
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); 
+  transform: translateY(-2px); 
+}
+
+.download_report_btn:active {
+  background-color: #b3d3e3; 
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); 
+  transform: translateY(1px); 
+}
+
 /* Responsive adjustments */
 @media (max-width: 768px) {
   form {
@@ -380,3 +407,4 @@ form {
     padding: 10px;
   }
 }
+
